[package]
name = "krabligraphy"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "A crate that is intended for generating text that you can paste into Discord for fun."
authors = ["AxelSilverdew <axel@foss.life>"]
keywords = ["discord", "meme", "krab", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
